Bug fixes/mb (#103)
* GH-102 :: remove trailing slash from GetBaseUrl

* GH-90 :: add language to articlepageservice, organize usings, changes that i forgot to commit to membership starter branch

* GH-101 :: remove overflow:hidden to prevent page builder personalization dialog from being cut off

--- a/src/TrainingGuides.Web/wwwroot/assets/css/styles.css
+++ b/src/TrainingGuides.Web/wwwroot/assets/css/styles.css
@@ -1727,7 +1727,6 @@
 }
 .c-section.default {
   padding: 2rem 0;
-  overflow: hidden;
 }
 @media (min-width: 992px) {
   .c-section.default {
